--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WG Forge Test</title>
+    <style src="styles.css"></style>
 </head>
 <body>
     <div id="app"></div>
